# hanako

./: CMakeLists.txt  README.TXT
src/: g_assets.c  g_assets.h  g_cursor.c  g_cursor.h  g_global.h  g_main.c  g_scenes.c  g_scenes.h  m_assets.c  m_assets.h  m_global.c  m_global.h  m_main.c  m_scenes.c  m_scenes.h
src/engine/: e_asset.c  e_asset.h  e_core.c  e_core.h  e_draw.c  e_draw.h  e_math.c  e_math.h  e_scene.c  e_scene.h  e_screen.c  e_screen.h
src/game/: g_button.c  g_button.h  g_button_label.c  g_button_label.h  g_cursor.c  g_cursor.h  g_game.c  g_game.h  g_keyboard.c  g_keyboard.h  g_settings.c  g_settings.h  g_state.c  g_state.h
src/game/desktop/: g_desktop_assets.c  g_desktop_assets.h  g_desktop_icons.c  g_desktop_icons.h  g_desktop_window.c  g_desktop_window.h  g_desktop_windowmanager.c  g_desktop_windowmanager.h
src/game/desktop/windows/: g_desktop_windows_hanakocd.c  g_desktop_windows_hanakocd.h
src/scenes/: g_scene_boot.c  g_scene_boot.h  g_scene_test.c  g_scene_test.h  s_boot.c  s_boot.h  s_desktop.c  s_desktop.h  s_test.c  s_test.h
